2006-02-11  Michael Olson  <mwolson@gnu.org>

	* erc.el (erc-update-modules): Make some requirements shorter, so
	that it's easier to see why they are needed.

	* erc-stamp.el (erc-timestamp-use-align-to): Renamed from
	`erc-timestamp-right-align-by-pixel'.  Set the default based on
	whether we are in Emacs 22, and using X.  Improve documentation.
	(erc-insert-aligned): Remove calculation of offset, since
	:align-to pos works after all.  Unlike the previous solution, this
	one works when erc-stamp.el is compiled.
	(erc-insert-timestamp-right): Don't add length of string, and then
	later remove its displayed width.  This puts timestamps after
	erc-fill-column when erc-timestamp-right-column is nil, rather
	than before it.  It also fixes a subtle bug.  Remove use of
	`current-window', since there is no variable by that name in
	Emacs21, Emacs22, or XEmacs21 beta.  Check to see whether
	`erc-fill-column' is non-nil before using it.

2006-02-11  Diane Murray  <disumu@x3y2z1.net>

	* erc-list.el: Define `list' module which sets the alias
	`erc-cmd-LIST' to `erc-list-channels' when enabled and
	`erc-list-channels-simple' when disabled.
	(erc-list-channels): Was `erc-cmd-LIST', renamed.
	(erc-list-channels-simple): New function.

	* erc.el (erc-modules): Added `list' to enabled modules.  Moved
	customization options left in source code.

	* erc-menu.el (erc-menu-definition): Use `erc-list-channels'.

	* erc-spelling.el (define-erc-module): Make sure there's a buffer
	before calling `with-current-buffer'.

2006-02-10  Michael Olson  <mwolson@gnu.org>

	* Makefile (debbuild): Split from debrelease.
	(debrevision-mwolson): New rule that causes a Debian revision to
	be built.

	* erc.el (erc-migrate-modules): Use a better algorithm.  Thanks to
	Johan Bockgård.
	(erc-modules): Change use of 'pcomplete to 'completion.

2006-02-09  Diane Murray  <disumu@x3y2z1.net>

	* erc.el (erc-get-parsed-vector, erc-get-parsed-vector-nick)